feat: allow verified members to self-register (#20)
